--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Remove if fonts are not used */
 @import '~@fontsource/inter/100.css';
 @import '~@fontsource/inter/200.css';
